@@ -195,11 +195,9 @@ static apr_status_t rfc1413_query(apr_socket_t *sock, conn_rec *conn,
     char buffer[RFC1413_MAXDATA + 1];
     char user[RFC1413_USERLEN + 1];	/* XXX */
     apr_size_t buflen;
-    apr_sockaddr_t *localsa;
 
-    apr_socket_addr_get(&localsa, APR_LOCAL, sock);
-    apr_sockaddr_port_get(&sav_our_port, localsa);
-    sav_rmt_port = RFC1413_PORT;
+    apr_sockaddr_port_get(&sav_our_port, conn->local_addr);
+    apr_sockaddr_port_get(&sav_rmt_port, conn->remote_addr);
 
     /* send the data */
     buflen = apr_snprintf(buffer, sizeof(buffer), "%hu,%hu\r\n", sav_rmt_port,
